# WAITB

./: .gitignore  CREDITS.md  README.md  SPEC.md  index.html  pyproject.toml
results/: waitb_results.csv
waitb/: __init__.py  __main__.py  config.py  results.py  wordle.py
waitb/providers/: __init__.py  anthropic.py  base.py  google.py  groq.py  ollama.py  openai.py
waitb/words/: target.txt
