[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waitb"
version = "0.1.0"
description = "Wordle AI Terminal Benchmark - Test LLMs at playing Wordle"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
]

[project.scripts]
waitb = "waitb.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["waitb*"]
